# Proiect1_GC

./: CMakeLists.txt  README.md  epsilon_table.txt  main.cpp
